<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_top" />

    <RadioGroup
        android:id="@+id/fragment_rank_rg"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fragment_rank_rb_collect"
            style="@style/collect_top_tab"
            android:checked="true"
            android:text="@string/rank_collect" />

        <RadioButton
            android:id="@+id/fragment_rank_rb_pay"
            style="@style/collect_top_tab"
            android:text="@string/rank_pay" />

        <RadioButton
            android:id="@+id/fragment_rank_rb_income"
            style="@style/collect_top_tab"
            android:text="@string/rank_income" />

        <RadioButton
            android:id="@+id/fragment_rank_rb_consume"
            style="@style/collect_top_tab"
            android:text="@string/rank_consume" />
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_ranking_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>